# ROS-Course-Design

./: DISTANCE_UPGRADE.md  README.md  navigation_with_traffic_light.py  traffic_light_result.txt
devel/: .catkin
devel/include/orbbec_camera/: DeviceInfo.h  DeviceStatus.h  Extrinsics.h  GetBoolResponse.h  GetCameraInfoResponse.h  GetCameraParamsResponse.h  GetDeviceInfoResponse.h  GetInt32Response.h  GetStringResponse.h  IMUInfo.h  Metadata.h  SetArrays.h  SetArraysRequest.h  SetArraysResponse.h  SetBoolRequest.h  SetBoolResponse.h  SetFilter.h  SetFilterRequest.h  SetFilterResponse.h  SetInt32Request.h  SetInt32Response.h  SetStringRequest.h  SetStringResponse.h
devel/include/robot_pose_ekf/: GetStatusResponse.h
devel/include/rplidar_ros/: paramsConfig.h
devel/lib/1_traffic_light_yolo/: traffic_light_yolov8_node.py
devel/lib/driver/: driver_node
devel/lib/ele-line-follower/: map_build_manager.py
devel/lib/orbbec_camera/: image_sync_example_node  list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  orbbec_camera_node  service_benchmark_node  set_device_ip
devel/lib/pkgconfig/: 1_traffic_light_yolo.pc  driver.pc  ele-line-follower.pc  ele_line_follower.pc  navigation.pc  new_wulina.pc  orbbec_camera.pc  robot_pose_ekf.pc  ros_nav_phm.pc  roscar_slam.pc  rplidar_ros.pc  start_roscar.pc  teleop_twist_keyboard.pc  traffic_light_yolo.pc  traffic_light_yolo_1.pc  usb_cam.pc  wulina.pc
devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/usb_cam/: usb_cam_node
docs/: navigation_guide.md  param_tuning_no_reverse.md  straight_line_navigation.md
src/driver/: CMakeLists.txt  package.xml
src/driver/include/: Quaternion_Solution.h  ros_car_driver.h
src/driver/launch/: car_driver.launch
src/driver/src/: ros_car_driver.cpp
src/ele_line_follower/: CMakeLists.txt  package.xml
src/ele_line_follower/scripts/: ele_line_follower.py
src/orbbec_camera/: CMakeLists.txt  README.MD  README_CN.MD  package.xml
src/orbbec_camera/config/: OrbbecSDKConfig_v2.0.xml  gemini305_dual_color.yaml
src/orbbec_camera/launch/: astra.launch  astra2.launch  dabai_al.launch  dabai_dcw2.launch  femto.launch  femto_bolt.launch  femto_mega.launch  gemini2.launch  (+14 more)
src/robot_pose_ekf/: CMakeLists.txt
src/ros_nav_phm/: CMakeLists.txt  package.xml
src/roscar_slam/: CMakeLists.txt
src/start_roscar/: CMakeLists.txt  package.xml
src/start_roscar/launch/: multi_point_navigation.launch  navigation.launch  robot_model_visualization.launch  start_roscar.launch
src/start_roscar/launch/include/: robot_pose_ekf.launch
src/start_roscar/map/: roscar_map1.pgm  roscar_map1.yaml  roscar_map2.yaml  roscar_map3.pgm  roscar_map3.yaml  roscar_map5.yaml  roscar_map_2.yaml
src/start_roscar/param/: move_base_params.yaml  teb_local_planner_params.yaml
src/start_roscar/roscar_navigation/: CMakeLists.txt
src/start_roscar/roscar_navigation/src/: roscar_navigation.py
src/start_roscar/scripts/: multi_point_navigation.py
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
src/traffic_light_yolo/: CMakeLists.txt  package.xml  traffic_light_result.txt
src/traffic_light_yolo/scripts/: traffic_light_yolov8_node.py
src/traffic_light_yolo_1/: CMakeLists.txt  best.pt  best_new.pt
src/wulina/: CMakeLists.txt  README.md  package.xml
src/wulina/launch/: multi_point_navigation.launch  multi_point_navigation1.launch  odom_navi.launch  straight_line_navigation.launch  traffic_light_navigation.launch
src/wulina/param/: straight_move_base_params.yaml  straight_teb_params.yaml
src/wulina/scripts/: multi_point_navigation.py  multi_point_navigation1.py  odom_navi.py  straight_line_nav.py
src/wulina/src/traffic_light_yolo/: CMakeLists.txt  best.pt  best_new.pt  package.xml
src/wulina/src/traffic_light_yolo/launch/: traffic_light_yolo.launch
src/wulina/src/traffic_light_yolo/scripts/: navigation_with_traffic_light.py  traffic_light_yolov8_node.py
(+70 files in other folders)
