<?xml version="1.0"?>
<package format="2">
  <name>wulina</name>
  <version>1.0.0</version>
  <description>
    wulina 功能包：存放课程设计中新增的 ROS 节点，目前包含多点自主导航节点。
  </description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Python 运行时 -->
  <exec_depend>rospy</exec_depend>
  <!-- 导航动作库 -->
  <exec_depend>actionlib</exec_depend>
  <!-- move_base 动作消息 -->
  <exec_depend>move_base_msgs</exec_depend>
  <!-- 位姿/几何消息 -->
  <exec_depend>geometry_msgs</exec_depend>
  <!-- 坐标变换（四元数计算） -->
  <exec_depend>tf</exec_depend>
</package>
